# autofinance

./: .gitignore  desc.md  desc_amendment1.md
b3_alloc_system/: README.md  codebase_dump_b3_alloc_system.txt  environment.yml  pyproject.toml  run_backtest.py
b3_alloc_system/config/: config.yaml  portfolio_A.yaml  universe_conservative.csv  universe_small.csv
b3_alloc_system/config/views/: qualitative_views_A.yaml
b3_alloc_system/data/processed/: factor_panel_daily.parquet  fundamentals_quarterly.parquet  fx_usd_brl_daily.parquet  index_ibov_daily.parquet  prices_equity_daily.parquet  risk_free_daily.parquet
b3_alloc_system/notebooks/: 00_data_audit.ipynb
b3_alloc_system/scripts/: build_factors.py  generate_report.py  run_backtests.py  update_data.py
b3_alloc_system/src/b3_alloc_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
b3_alloc_system/src/b3alloc/: config.py  utils_dates.py
b3_alloc_system/src/b3alloc/backtest/: analytics.py  engine.py  portfolio_accounting.py
b3_alloc_system/src/b3alloc/bl/: __init__.py  black_litterman.py  confidence.py  view_builder.py
b3_alloc_system/src/b3alloc/data/: __init__.py  ingest_fundamentals.py  ingest_fx.py  ingest_prices.py  ingest_selic.py
b3_alloc_system/src/b3alloc/factors/: fama_french_b3.py
b3_alloc_system/src/b3alloc/fx/: ff_view.py  fx_ingest.py
b3_alloc_system/src/b3alloc/optimize/: constraints.py  mean_variance.py
b3_alloc_system/src/b3alloc/preprocess/: align.py  clean.py  returns.py
b3_alloc_system/src/b3alloc/returns/: ff_view.py  var_view.py
b3_alloc_system/src/b3alloc/risk/: dcc.py  garch.py  risk_engine.py  shrinkage.py
b3_alloc_system/src/b3alloc/taxes/: darf_reporter.py  ledger.py  tax_tracker.py
b3_alloc_system/src/b3alloc/trades/: trade_calculator.py
b3_alloc_system/src/b3alloc/views/: views_parser.py
b3_alloc_system/src/b3alloc/viz/: plots_portfolio.py
